Updated README file, cleaned up html spacing, fixed email me button, added assets and css folders

--- a/style/styles.css
+++ b/style/styles.css
@@ -1,5 +1,3 @@
-
-
 a {
   color: lightgrey;
   text-decoration: none;
@@ -26,7 +24,7 @@ p {
 
 body {
     background-attachment: scroll;
-    background-image: url("blackwood.jpg");
+    background-image: url("../assets/blackwood.jpg");
 }
 
 .row {
